--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/favicon.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="keywords"
+      content="CodeWithAbdur , Music-App , CodeWithAbdur-Music-App, MelodicVerse, Music, React, Vite, Firebase, Sanity, Music Discovery, Personalized Music, Music Community, Music Player, Music Library, Music Recommendations, Collaborative Playlists, Music App, mp3 music, free music"
+    />
+    <meta
+      name="description"
+      content="MelodicVerse is a sophisticated music application that offers a personalized and immersive listening experience. Built using Vite, React.js, Sanity, and Firebase, MelodicVerse seamlessly integrates cutting-edge technologies to deliver a seamless and delightful music discovery platform.
+
+With MelodicVerse, users can explore a vast library of songs, albums, and playlists tailored to their unique preferences. Whether you're into chart-topping hits, indie classics, or underground gems, MelodicVerse has something for everyone.
+
+Featuring a sleek and intuitive user interface, MelodicVerse allows users to effortlessly browse, search, and discover new music across a variety of genres and moods. Our recommendation engine utilizes advanced algorithms to curate personalized playlists based on your listening history and preferences, ensuring that you always find the perfect soundtrack for any moment.
+
+But MelodicVerse is more than just a music player—it's a community. Connect with fellow music enthusiasts, share your favorite tracks and playlists, and discover new artists and genres together. With social features like user profiles, friend lists, and collaborative playlists, MelodicVerse transforms music listening into a shared and interactive experience.
+
+And with seamless integration with Firebase, MelodicVerse offers a robust and reliable backend infrastructure, ensuring smooth performance and real-time updates across all devices. Whether you're on your desktop, smartphone, or tablet, MelodicVerse delivers a consistent and high-quality music experience wherever you go.
+
+Experience the future of music discovery with MelodicVerse. Sign up now and embark on a journey of endless musical exploration and discovery."
+    />
+    <title>
+      CodeWithAbdur || MelodicVerse - Your Personalized Music Experience
+    </title>
   </head>
   <body>
     <div id="root"></div>
